@@ -47,6 +47,10 @@
 		MIDI mapping does not apply to render results.</li>
 		<li>Panic.<br>
 		If somehow the player messed up, use this action to turn off all the notes.
+		<li>Restart fluidsynth.<br>
+		It's not possible to use this action unless the player is stopped.<br>
+		Applies settings and restart the internel fluidsynth engine when "single fluidsynth instance"
+		is enabled.
 		</li>
 	</ul>
 	<br><a href="index.html">Return</a>
