@@ -1,3 +1,6 @@
+2016-06-03 0.8.2 alpha
+Add the "restart fluidsynth" action.
+
 2016-06-02 0.8.2 alpha
 Add option to change note colors.
 
